--- a/uiowa-presentation/index.html
+++ b/uiowa-presentation/index.html
@@ -28,10 +28,10 @@
             </section>
 
             <!-- Research Questions -->
-            <section data-markdown="slides/04-research-questions.md"></section>
+            <section data-markdown="slides/04-persistence.md"></section>
 
             <!-- Methodology -->
-            <section data-markdown="slides/05-methodology.md" 
+            <section data-markdown="slides/05-visualizations.md" 
                      data-separator="^\n\n\n" 
                      data-separator-vertical="^\n\n">
             </section>
