updated post meeting

--- a/uiowa-presentation/index.html
+++ b/uiowa-presentation/index.html
@@ -27,8 +27,11 @@
                      data-separator-vertical="^\n\n">
             </section>
 
-            <!-- Research Questions -->
-            <section data-markdown="slides/04-persistence.md"></section>
+            <!-- Persistence and Stability -->
+            <section data-markdown="slides/04-persistence.md"
+                     data-separator="^\n\n\n" 
+                     data-separator-vertical="^\n\n">
+            </section>
 
             <!-- Methodology -->
             <section data-markdown="slides/05-visualizations.md" 
@@ -37,17 +40,24 @@
             </section>
 
             <!-- Results -->
-            <section data-markdown="slides/06-results.md"></section>
+            <section data-markdown="slides/06-results.md"
+                     data-separator="^\n\n\n" 
+                     data-separator-vertical="^\n\n">
+            </section>
 
             <!-- Future Work -->
-            <section data-markdown="slides/07-future-work.md"></section>
+            <section data-markdown="slides/07-future-work.md"
+                     data-separator="^\n\n\n" 
+                     data-separator-vertical="^\n\n">
+            </section>
 
             <!-- Timeline -->
-            <section data-markdown="slides/08-timeline.md"></section>
-
+            <section data-markdown="slides/08-timeline.md"
+                     data-separator="^\n\n\n" 
+                     data-separator-vertical="^\n\n">
+            </section>
             <!-- Questions -->
             <section data-markdown="slides/09-questions.md" 
-                     data-background-color="#000000">
             </section>
         </div>
     </div>
