--- a/uiowa-presentation/index.html
+++ b/uiowa-presentation/index.html
@@ -22,7 +22,7 @@
             <section data-markdown="slides/02-outline.md"></section>
 
             <!-- Background Section -->
-            <section data-markdown="slides/03-background.md" 
+            <section data-markdown="slides/03-topologification.md" 
                      data-separator="^\n\n\n" 
                      data-separator-vertical="^\n\n">
             </section>
@@ -34,7 +34,7 @@
             </section>
 
             <!-- Methodology -->
-            <section data-markdown="slides/05-visualizations.md" 
+            <section data-markdown="slides/05-mapper.md" 
                      data-separator="^\n\n\n" 
                      data-separator-vertical="^\n\n">
             </section>
@@ -46,13 +46,13 @@
             </section>
 
             <!-- Future Work -->
-            <section data-markdown="slides/07-future-work.md"
+            <section data-markdown="slides/07-results.md"
                      data-separator="^\n\n\n" 
                      data-separator-vertical="^\n\n">
             </section>
 
             <!-- Timeline -->
-            <section data-markdown="slides/08-timeline.md"
+            <section data-markdown="slides/08-future-work.md"
                      data-separator="^\n\n\n" 
                      data-separator-vertical="^\n\n">
             </section>
