--- a/uiowa-presentation/index.html
+++ b/uiowa-presentation/index.html
@@ -40,7 +40,7 @@
             </section>
 
             <!-- Results -->
-            <section data-markdown="slides/06-results.md"
+            <section data-markdown="slides/06-visualizations.md"
                      data-separator="^\n\n\n" 
                      data-separator-vertical="^\n\n">
             </section>
