--- a/first_seminar/index.html
+++ b/first_seminar/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Comprehensive Exam - University of Iowa</title>
+    <title>UMAP - University of Iowa</title>
     <link rel="stylesheet" href="node_modules/reveal.js/dist/reveal.css">
     <link rel="stylesheet" href="css/uiowa-theme.css">
     <link rel="stylesheet" href="node_modules/reveal.js/plugin/highlight/monokai.css">
